Anonymous | Login | 2019-02-19 11:28 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0027732 | Open CASCADE | [OCCT] OCCT:Visualization | public | 2016-08-01 15:42 | 2018-06-29 21:19 | ||||
Reporter | oan | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.0.0 | ||||||||
Target Version | [OCCT] 7.3.0 | Fixed in Version | [OCCT] 7.3.0 | ||||||
Summary | 0027732: Visualization - AIS_ConnectedInteractive crashes on NULL handle returned by MeshVS_CommonSensitiveEntity::GetConnected() | ||||||||
Description | MeshVS_CommonSensitiveEntity::GetConnected() returns null handle leading to crash in case of AIS_MultipleConnectedInteractive | ||||||||
Steps To Reproduce | pload VISUALIZATION XDE vclear vinit View1 meshfromstl m [locate_data_file bug26680.stl] meshcolors m elem2 1 vselmode m 0 1 vconnect cm 50 0 0 m Result: ** Exception ** 0000025F253A3F90 : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0x0000000000000000 during 'READ' operation Original test case: Handle(AIS_MultipleConnectedInteractive) aPrs = new AIS_MultipleConnectedInteractive; aPrs->Connect((MeshVS_Mesh)(...)); aPrs->Connect((MeshVS_Mesh)(...)); //Display | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | |||||||||
![]() |
|
(0074448) git (administrator) 2018-03-13 17:55 |
Branch CR27732 has been created by kgv. SHA-1: e09390d14538551acd4c645ea8c836e1a04f5d70 Detailed log of new commits: Author: kgv Date: Tue Mar 13 17:54:11 2018 +0300 0027732: Visualization - AIS_ConnectedInteractive crashes on NULL handle returned by MeshVS_CommonSensitiveEntity::GetConnected() AIS_ConnectedInteractive::ComputeSelection() - added NULL-check. |
(0074453) kgv (developer) 2018-03-13 20:49 |
Patch is ready for review. Note that patch only solves NULL-dereference - it does not make MeshVS_Mesh useful with AIS_MultipleConnectedInteractive due to numerous of other issues like dynamic highlighting overridden by MeshVS_Mesh. http://jenkins-test-10.nnov.opencascade.com/view/CR27732-master-KGV/ [^] |
(0074454) abv (manager) 2018-03-13 23:17 |
Kirill, please describe all the changes included in the commit in its message, not only changes in one file |
(0074461) git (administrator) 2018-03-14 11:07 |
Branch CR27732 has been updated forcibly by kgv. SHA-1: bd2412acb57924eefd1eee28b185c3943ed60b53 |
(0074751) san (developer) 2018-03-21 20:15 |
Branch CR27732 reviewed without remarks, ready for testing. |
(0074760) bugmaster (administrator) 2018-03-22 14:08 |
Combination - OCCT branch : CR27732 SHA - e09390d14538551acd4c645ea8c836e1a04f5d70 Products branch : master SHA - 4fd289ec73d35d02f23f3990c73b3acac9a60574 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian70-64: OCCT Total CPU difference: 18374.429999999764 / 18338.37999999957 [+0.20%] Products Total CPU difference: 7443.820000000006 / 7461.340000000009 [-0.23%] Windows-64-VC10: OCCT Total CPU difference: 17602.0764330986 / 17653.338361698563 [-0.29%] Products Total CPU difference: 7975.207922799987 / 7990.761222500007 [-0.19%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0074864) git (administrator) 2018-03-24 20:01 |
Branch CR27732 has been deleted by kgv. SHA-1: bd2412acb57924eefd1eee28b185c3943ed60b53 |
![]() |
|||
occt: master 834f2897
Timestamp: 2018-03-13 14:54:11 Author: kgv Committer: bugmaster [ Details ] [ Diff ] |
0027732: Visualization - AIS_ConnectedInteractive crashes on NULL handle returned by MeshVS_CommonSensitiveEntity::GetConnected() Added NULL-check to AIS_ConnectedInteractive::ComputeSelection(). Added missing interface methods MeshVS_Mesh::AcceptDisplayMode() and MeshVS_CommonSensitiveEntity::GetConnected(). |
||
mod - src/AIS/AIS_ConnectedInteractive.cxx | [ Diff ] [ File ] | ||
mod - src/MeshVS/MeshVS_CommonSensitiveEntity.cxx | [ Diff ] [ File ] | ||
mod - src/MeshVS/MeshVS_CommonSensitiveEntity.hxx | [ Diff ] [ File ] | ||
mod - src/MeshVS/MeshVS_Mesh.cxx | [ Diff ] [ File ] | ||
mod - src/MeshVS/MeshVS_Mesh.hxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2016-08-01 15:42 | oan | New Issue | |
2016-08-01 15:42 | oan | Assigned To | => kgv |
2016-10-25 09:32 | kgv | Target Version | 7.1.0 => 7.2.0 |
2017-07-20 10:49 | kgv | Target Version | 7.2.0 => 7.3.0 |
2018-03-13 16:07 | kgv | Product Version | => 7.0.0 |
2018-03-13 16:07 | kgv | Summary | MeshVS_CommonSensitiveEntity::GetConnected() returns null handle leading to crash in case of AIS_MultipleConnectedInteractive => Visualization - AIS_ConnectedInteractive crashes on NULL handle returned by MeshVS_CommonSensitiveEntity::GetConnected() |
2018-03-13 16:07 | kgv | Steps to Reproduce Updated | View Revisions |
2018-03-13 17:55 | git | Note Added: 0074448 | |
2018-03-13 20:49 | kgv | Note Added: 0074453 | |
2018-03-13 20:49 | kgv | Assigned To | kgv => san |
2018-03-13 20:49 | kgv | Status | new => resolved |
2018-03-13 23:17 | abv | Note Added: 0074454 | |
2018-03-14 11:07 | git | Note Added: 0074461 | |
2018-03-21 20:15 | san | Note Added: 0074751 | |
2018-03-21 20:15 | san | Assigned To | san => bugmaster |
2018-03-21 20:15 | san | Status | resolved => reviewed |
2018-03-22 14:05 | bugmaster | Test case number | => Not needed |
2018-03-22 14:08 | bugmaster | Note Added: 0074760 | |
2018-03-22 14:08 | bugmaster | Status | reviewed => tested |
2018-03-24 11:51 | bugmaster | Changeset attached | => occt master 834f2897 |
2018-03-24 11:51 | bugmaster | Status | tested => verified |
2018-03-24 11:51 | bugmaster | Resolution | open => fixed |
2018-03-24 20:01 | git | Note Added: 0074864 | |
2018-06-29 21:14 | aiv | Fixed in Version | => 7.3.0 |
2018-06-29 21:19 | aiv | Status | verified => closed |
Copyright © 2000 - 2019 MantisBT Team |